/*
 * $Id: ChangeLog,v 1.5543 2007/05/21 17:18:03 ran_go Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2007-05-21 20:30 UTC-0300 Eduardo Fernandes <modalsist@yahoo.com.br>
  * source/rtl/tget.prg
    ! fixed "@Sn" pict behaviour when "n" is larger than get width.
      Thanks to Ed Horbino by help.
    ! fixed "@X", "@C", "@(" and "@)" pictures behaviour as reported
      in dev-list by Toninho.

2007-05-21 14:20 UTC-0300 Ranier Vilela <ranier/at/cultura.com.br>
  * source/vm/eval.c
    * Fix HB_FUNC to make a MSVC 8 happy (line 762).

2007-05-21 11:20 UTC-0500 Ron Pinkas <ron/at/xharbour.com>
  * hrbdll.bc
    * Updated for PCRE 7.1
    - Removed unneeded ppcomp    
    * Minor adjustments
  * hrbdll.vc
    * Updated for PCRE 7.1
    
  * contrib/freeimage/MAKEFILE.BC
  * contrib/freeimage/env/bccWin32.Mak
  * contrib/freeimage/env/makelib.b32
  * contrib/gd/MAKEFILE.BC
  * contrib/gd/MAKE_B32.BAT
  * contrib/gd/env/bccWin32.Mak
  * contrib/gd/env/makelib.b32
  * contrib/gtwvw/samples/wvwtest9.bc
  * contrib/libnf/makefile.bc
    - Removed all instances of BCCDIR and BCC_DIR
      /* Please avoid this practice, instead make sure you have
         correct bcc32.cfg and ilink32.cfg in your BCC installation */     

2007-05-20 23:27 UTC-0500 Ron Pinkas <ron/at/xharbour.com>
  * source/vm/eval.c
    ! Fixed HB_Exec() building wrong execution stack for hb_vmDo()/hb_vmSend()
    
    /* 
       NOTE: This fix forces requires the docs to specify that HB_Exec() syntax is:
       
       HB_Exec( pFunction_or_Method_Pointer [, <NIL_or_SelfObject> [, ...] ] )
       
       // If calling a function, passed arguments MUST be preceded by a NIL!
       HB_Exc( pSomeFunctionPinter [, NIL, Arg1 [, ArgN] ] ) 
       
       // If calling a Method, passed arguments MUST be preceded by the Self object!